[workspace]
members = ["derive", "."]

[package]
name = "multihash"
description = "Implementation of the multihash format"
repository = "https://github.com/multiformats/rust-multihash"
keywords = ["multihash", "ipfs"]
version = "0.13.2"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "David Craven <david@craven.ch>", "Volker Mische <volker.mische@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/multihash/"
edition = "2018"

[features]
default = ["std", "derive", "multihash-impl", "secure-hashes"]
std = ["unsigned-varint/std", "multihash-derive/std"]
multihash-impl = ["derive"]
derive = ["multihash-derive"]
arb = ["quickcheck", "rand"]
secure-hashes = ["blake2b", "blake2s", "blake3", "sha2", "sha3"]
scale-codec = ["parity-scale-codec"]
serde-codec = ["serde", "generic-array/serde"]

blake2b = ["blake2b_simd"]
blake2s = ["blake2s_simd"]
identity = []
sha1 = ["digest", "sha-1"]
sha2 = ["digest", "sha-2"]
sha3 = ["digest", "sha-3"]
strobe = ["strobe-rs"]

[dependencies]
generic-array = "0.14.4"
parity-scale-codec = { version = "1.3.5", optional = true, default-features = false, features = ["derive"] }
quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.116", optional = true, default-features = false, features = ["derive"] }
multihash-derive = { version = "^0.7.1", path = "derive", default-features = false, optional = true }
unsigned-varint = "0.7.0"

blake2b_simd = { version = "0.5.10", default-features = false, optional = true }
blake2s_simd = { version = "0.5.10", default-features = false, optional = true }
blake3 = { version = "0.3.7", default-features = false, optional = true }
digest = { version = "0.9.0", default-features = false, optional = true }
sha-1 = { version = "0.9.1", default-features = false, optional = true }
sha-2 = { version = "0.9.0", default-features = false, optional = true, package = "sha2" }
sha-3 = { version = "0.9.0", default-features = false, optional = true, package = "sha3" }
strobe-rs = { version = "0.5.4", optional = true }

[dev-dependencies]
criterion = "0.3.3"
hex = "0.4.2"
quickcheck = "0.9.2"
rand = "0.7.3"
serde_json = "1.0.58"

[[bench]]
name = "multihash"
harness = false
