[workspace]
members = ["derive", "."]
resolver = "2"

[package]
name = "multihash"
version = "0.18.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "David Craven <david@craven.ch>", "Volker Mische <volker.mische@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "Implementation of the multihash format"
license = "MIT"
readme = "README.md"
keywords = ["multihash", "ipfs"]
repository = "https://github.com/multiformats/rust-multihash"
documentation = "https://docs.rs/multihash/"

[features]
default = ["std", "derive", "multihash-impl", "secure-hashes"]
std = ["unsigned-varint/std", "multihash-derive/std", "alloc"]
alloc = ["core2/alloc"]
multihash-impl = ["derive"]
derive = ["multihash-derive"]
arb = ["quickcheck", "rand", "arbitrary"]
scale-codec = ["parity-scale-codec"]
serde-codec = ["serde", "serde-big-array"]
secure-hashes = ["blake2b", "blake2s", "blake3", "sha2", "sha3"]
blake2b = ["blake2b_simd"]
blake2s = ["blake2s_simd"]
blake3 = ["dep:blake3"]
identity = []
sha1 = ["digest", "dep:sha1"]
sha2 = ["digest", "dep:sha2"]
sha3 = ["digest", "dep:sha3"]
ripemd = ["digest", "dep:ripemd"]
strobe = ["strobe-rs"]

[dependencies]
core2 = { version = "0.4.0", default-features = false }
multihash-derive = { version = "0.8.0", path = "derive", default-features = false, optional = true }
unsigned-varint = { version = "0.7.1", default-features = false }

# Optional arbitrary features.
arbitrary = { version = "1.1.0", optional = true }
quickcheck = { version = "1.0.3", optional = true }
rand = { version = "0.8.5", features = ["small_rng"], optional = true }

# Optional codec features
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0.116", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.4.1", optional = true }

# Optional hash algorithms
blake2b_simd = { version = "1.0.0", default-features = false, optional = true }
blake2s_simd = { version = "1.0.0", default-features = false, optional = true }
blake3 = { version = "1.2.0", default-features = false, optional = true }
digest = { version = "0.10.1", default-features = false, optional = true }
ripemd = { version = "0.1.1", optional = true }
sha1 = { version = "0.10.0", default-features = false, optional = true }
sha2 = { version = "0.10.0", default-features = false, optional = true }
sha3 = { version = "0.10.0", default-features = false, optional = true }
strobe-rs = { version = "0.8.1", default-features = false, optional = true }

[dev-dependencies]
arbitrary = "1.1.0"
criterion = "0.4.0"
hex = "0.4.2"
multihash = { path = ".", features = ["sha1", "strobe"] }
quickcheck = "1.0.3"
rand = "0.8.5"
serde_json = "1.0.58"

[[bench]]
name = "multihash"
harness = false
