[package]
name = "multihash-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
digest = "0.8.1"
env_logger = "0.6.2"
exitfailure = "0.5.1"
failure = "0.1.5"
log = "0.4.8"
multibase = "0.6.0"
multihash = { path = ".." }
structopt = "0.3.0"

[[bin]]
name = "multihash"
path = "main.rs"
