[package]
name = "multihash-derive"
version = "0.8.1"
edition = "2018"
description = "Proc macro for deriving custom multihash tables."
license = "MIT"
repository = "https://github.com/multiformats/rust-multihash"

[dependencies]
multihash-derive-impl = { version = "0.1.0", path = "../derive-impl" }
multihash = { version = "0.18.0", path = "../" }

[dev-dependencies]
trybuild = "1.0.80"
multihash-codetable = { path = "../codetable" }
