[package]
name = "multihash-derive"
version = "0.9.2"
description = "Proc macro for deriving custom multihash tables."
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.81"

[features]
default = ["std"]
std = ["multihash/std"]

[dependencies]
multihash-derive-impl = { version = "0.1.2", path = "../derive-impl" }
multihash = { version = "0.19.2", path = "../", default-features = false }

[dev-dependencies]
trybuild = "1.0.80"
multihash-codetable = { path = "../codetable", features = ["strobe"] }
