[package]
name = "multihash-proc-macro"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
proc-macro-crate = "0.1.4"
proc-macro-error = "1.0.2"
quote = "1.0.7"
syn = "1.0.31"
synstructure = "0.12.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
multihash = { path = "..", default-features = false, features = ["strobe"] }
